fixed notifications styling for various screen sizes and added setInterval function to checke for soon-to-due tasks every minute. Also shifted showNotifications state to store.js instead of keeping it in App.js

--- a/src/index.css
+++ b/src/index.css
@@ -80,8 +80,8 @@ body.modal-open{
   position:fixed;
   right:-50%;
   bottom:5%;
-  height:20%;
-  width:40%;
+  height:30%;
+  width:60%;
   transition: right .5s;
 }
 
